--- a/src/assets/css/slider.css
+++ b/src/assets/css/slider.css
@@ -89,7 +89,7 @@
 }
 
 .nyancat .vue-slider-dot-handle {
-  background: url("/img/logos/nyancat.gif");
+  background: url("/../img/logos/nyancat.gif");
   background-size: 36px;
   width: 36px;
   height: 24px;
